--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<span class="image avatar"><img src="images/headshot.png" alt="" /></span>
+					<h1 id="logo"><a href="#">Alexandro Hernandez</a></h1>
+					<p>Hello and Welcome to my portfolio.<br />
+					This page is a work in progress.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/pexels-danny-meneses.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
