--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#four">Projects</a></li>
+						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -64,7 +64,7 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
+									<h3>Languages I Have worked With</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
@@ -76,9 +76,16 @@
 									</ul>
 								</div>
 							</section>
-
-						<!-- Three -->
+						
+						<!--Three-->
 							<section id="three">
+								<div class="container">
+									<h3>Education</h3>
+								</div>
+							</section>
+
+						<!-- four -->
+							<section id="four">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -108,8 +115,8 @@
 								</div>
 							</section>
 
-						<!-- Four -->
-							<section id="four">
+						<!-- five -->
+							<section id="five">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
