finished first draft

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+
 	</head>
 	<body class="is-preload">
 
@@ -24,18 +26,18 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
+						<li><a href="#two">Programming Languages</a></li>
+						<li><a href="#three">Education</a></li>
 						<li><a href="#four">Projects</a></li>
 						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/alexandro-hernandez-59821a179" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/ah_72/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/fr33gaming" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:fr33gaming209@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -53,11 +55,9 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>My Journey</h2>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I am an aspiring Software Engineer looking for more experience to further develop my knowledge in the subject. I am still exploring different niches within the field, but I am leaning more towards Web Development. I have worked with many different languages and frameworks during my time and UC Merced and SNHU. I am looking forward to grow and have direct experience with these technologies.</p>
 								</div>
 							</section>
 
@@ -65,14 +65,15 @@
 							<section id="two">
 								<div class="container">
 									<h3>Languages I Have worked With</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>I consider myself to have an intermediate knowledge of the languages and frameworks below.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="fa-python">Python</li>
+										<li class="icon solid fa-code">C++</li>
+										<li class="icon solid fa-java">Java</li>
+										<li class="fa-html5">Html</li>
+										<li class="icon solid fa-code">MongoDB</li>
+										<li class="fa-css3-alt">CSS</li>
+										<li class="icon solid fa-code">NoSQL</li>
 									</ul>
 								</div>
 							</section>
@@ -81,29 +82,48 @@
 							<section id="three">
 								<div class="container">
 									<h3>Education</h3>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/UC_Merced_Seal.png" alt="" /></a>
+											<div class="inner">
+												<h4>University of California Merced</h4>
+												<p>Attended August 2020 - May 2023</p>
+												<p>Major: Computer Science and Engineering</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/logo-mobile.png" alt="" /></a>
+											<div class="inner">
+												<h4>Southern New Hampshire University</h4>
+												<p>Expected Graduation March 2025</p>
+												<p>Major: Computer Science with Emphasis in Software Development</p>
+											</div>
+										</article>
 								</div>
 							</section>
 
 						<!-- four -->
 							<section id="four">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>My Projects</h3>
+									<p>Showcased below are projects that show my skills in action.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Project One</h4>
+												<p>Coming soon...</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Project Two</h4>
+												<p>Coming Soon...</p>
 											</div>
 										</article>
+
+										<!--remove temporarily
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
@@ -111,15 +131,17 @@
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
+									-->
 									</div>
 								</div>
 							</section>
+
 
 						<!-- five -->
 							<section id="five">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Feel free to send me a message or reach out on social media.</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -474,7 +496,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Alexandro Hernandez. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
