icons did not load correctly added new icons

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 									<h3>Languages I Have worked With</h3>
 									<p>I consider myself to have an intermediate knowledge of the languages and frameworks below.</p>
 									<ul class="feature-icons">
-										<li class="fa-python">Python</li>
+										<li class="icon solid fa-code">Python</li>
 										<li class="icon solid fa-code">C++</li>
-										<li class="icon solid fa-java">Java</li>
-										<li class="fa-html5">Html</li>
+										<li class="icon solid fa-code">Java</li>
+										<li class="icon solid fa-code">Html</li>
 										<li class="icon solid fa-code">MongoDB</li>
-										<li class="fa-css3-alt">CSS</li>
+										<li class="icon solid fa-code">CSS</li>
 										<li class="icon solid fa-code">NoSQL</li>
 									</ul>
 								</div>
