added target tag to some icons to open new pages

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/alexandro-hernandez-59821a179" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/ah_72/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/fr33gaming" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:fr33gaming209@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/alexandro-hernandez-59821a179" class="icon brands fa-linkedin" target="_blank"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/ah_72/" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/fr33gaming" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<li><a href="mailto:fr33gaming209@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
